--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bookshelf": "^0.14.2",
     "express": "^4.17.0",
     "knex": "^0.16.5",
+    "morgan": "^1.9.1",
     "pg": "^7.11.0"
   }
 }
