--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bookshelf": "^0.14.2",
+    "cloudinary": "^1.14.0",
     "express": "^4.17.0",
     "knex": "^0.16.5",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "pg": "^7.11.0"
   }
 }
