--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bookshelf": "^0.14.2",
     "cloudinary": "^1.14.0",
     "express": "^4.17.0",
+    "http-errors": "^1.7.2",
     "knex": "^0.16.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
